--- a/.gitignore
+++ b/.gitignore
@@ -33,12 +33,8 @@
 
 # Folders
 /.vscode/
-
+/Builds/
 /JuceLibraryCode/
-/source/dsp/
-/source/Gui
 
 # Files
-/source/Fifo.h
-/source/VerticalDiscreteMeter
 Builds/VisualStudio2022/
